deploy/kustomization/argocd/non-ha/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: argocd-ingressgateway
  servers:
    - hosts:
        - argocd.mydomain.org
      port:
        name: http
        number: 8080
        protocol: HTTP
